Fix title spacing error on windows

--- a/css/styles.css
+++ b/css/styles.css
@@ -34,6 +34,7 @@ h1, h2, h3, h4, h5, h6 {
 	font-style:normal;
 	color:#1F1F1F;
 	margin-bottom:17px;
+	letter-spacing: 1px;
 }
 
 h1 {
